# clatterdrive

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  audio_core.py  audio_engine.py  audit_audio_stack.py  compose.yaml  conftest.py  fs_simulator.py  generate_audio_samples.py  generate_readme_demo_samples.py  hdd_core.py  hdd_latency.py  hdd_model.py  main.py  os_scheduler.py  profile_core.py  profile_fragmentation.py  profiles.py  pyproject.toml  pytest.ini  runtime_paths.py  smoke.py  stress_test.py  test_architecture.py  test_fragmentation.py  test_simulator.py  trace_audio_scenarios.py  vfs_provider.py  virtual_hdd.py
.config/: dotnet-tools.json
.github/: dependabot.yml
clatterdrive/: __init__.py  __main__.py  app.py  config.py  hardware_priors.py  profiles.py  scheduler.py  scheduler_core.py  storage_events.py
docs/: index.html  macos-vm.md  mh-thrash-lab.html  thrash-lab.html  tick-contact-refine.html  tick-gallery.html  tick-hypotheses.html  tick-lab.html  tick-os-blend.html
fake_hdd_fuse/: __init__.py  app.py  profiles.py  scheduler.py  scheduler_core.py  storage_events.py
scripts/: Use-RepoUv.ps1  bootstrap-macos.sh  bootstrap.cmd  bootstrap.ps1  build-installer.cmd  build-installer.ps1  build-macos.sh  build-windows.ps1  ci.cmd  ci.ps1  lint.ps1  package-macos.sh  package-windows.cmd  package-windows.ps1  test-e2e.cmd  test-e2e.ps1  test-installer.cmd  test-installer.ps1  test-macos-e2e.sh  test-macos-tart.sh  test-macos.sh  test-release.cmd  test-release.ps1  test-ui.cmd  test-ui.ps1  test.ps1
tests/: conftest.py  helpers.py  test_app.py  (+11 more)
(+93 files in other folders)
