[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clatterdrive"
version = "0.1.0"
description = "ClatterDrive: novelty HDD latency and audio simulator exposed over WebDAV."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cheroot",
    "numpy",
    "scipy",
    "sounddevice",
    "WsgiDAV",
]

[project.scripts]
clatterdrive = "clatterdrive.__main__:main"

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "pytest-timeout",
    "pytest-xdist",
    "ruff",
    "vulture",
]

[tool.setuptools.packages.find]
include = ["clatterdrive*"]

[tool.ruff]
target-version = "py312"
exclude = [".git", ".pytest_cache", ".pytest_tmp", ".tmp_pip", ".tmp_tests", ".runtime", "samples"]

[tool.ruff.lint]
select = ["ANN", "B", "F", "PGH", "PLE", "RET", "RUF", "SIM", "UP"]
ignore = ["ANN401"]

[tool.mypy]
python_version = "3.12"
exclude = '(^samples/|^\.tmp_)'
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true

[tool.vulture]
exclude = [".git", ".pytest_cache", ".pytest_tmp", ".tmp_pip", ".tmp_tests", ".runtime", "samples"]
ignore_names = ["test_*", "_*callback"]
min_confidence = 80
